--- a/OxFordCOVID-19DataExploration.Rmd
+++ b/OxFordCOVID-19DataExploration.Rmd
@@ -56,6 +56,8 @@ We removed those columns to facilitate initial data exploration.
 
 ```{r ,}
 df = subset( data, select = -c(grep( "Notes" , names( data ) )) )
+df = subset( df, select = -c(grep( "General" , names( df ) )) )
+df2 = df
 names(df)
 str(df)
 summary(df)
@@ -64,9 +66,26 @@ summary(df)
 df$Date<-data.frame(as.Date(as.character(df$Date),"%Y%m%d")) #converting integer data frame to date, then we can calculate date differences (Updated Date (20200408) - Date of closing school, workplace etc.)
 
 
-df_0408<-filter(df,Date=="2020-04-08") #using the data on date 20200408
-df_0408<-arrange(df_0408,desc(ConfirmedCases, ConfirmedDeaths))#arranging in a decreasing order of confirmed cases and confirmed deaths
-df_0408_top30<-head(df_0408,30) #If we decide to use all 118 country data, delete this line.
+#df_0408<-filter(df,df$Date=="2020-04-08") #using the data on date 20200408
+#df_0408<-arrange(df_0408,desc(ConfirmedCases, ConfirmedDeaths))#arranging in a decreasing order of confirmed cases and confirmed deaths
+#df_0408_top30<-head(df_0408,30) #If we decide to use all 118 country data, delete this line.
+
+
+#summary(df2)
+df2_ = subset(df2, df2$Date == 20200408)
+df2_ = df2_[order(-df2_$ConfirmedCases, -df2_$ConfirmedDeaths),]
+
+top30 = factor(head(df2_,30)$CountryName)
+top30_list = levels(top30)
+#top30_list = as.list(levels(top30))
+top30_list
+
+df_top30 = subset(df, CountryName %in% top30_list)
+df_top30$CountryName = factor(df_top30$CountryName)
+df_top30$CountryCode = factor(df_top30$CountryCode)
+str(df)
+str(df_top30)
+
 
 ```
 
@@ -78,6 +97,16 @@ names(df_notes)
 str(df_notes)
 levels(df_notes$S1_Notes)[1:5]
 ```
+
+### Explore Notes
+To explore the general, we just peaked into one of the columns to see what kind of announcements they are using.
+```{r ,}
+df_general = subset( data, select = c(grep( "General" , names( data ) )) )
+names(df_general)
+str(df_general)
+levels(df_general$S1_IsGeneral)[1:5]
+```
+
 ## Potential Questions to Explore:
 
 * Which measures were most effective for which countries?
